# forgottenserver-downgrade-1.8-8.60

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  config.lua.dist  schema.sql  vcpkg.json
data/: global.lua  server_config.lua
data/XML/: imbuements.xml  mounts.xml  outfits.xml
data/chatchannels/: chatchannels.xml
data/chatchannels/scripts/: loot.lua
data/events/: events.xml
data/events/scripts/: player.lua
data/items/: items.otb  items.xml
data/lib/: lib.lua  monk_harmony.lua
data/lib/compat/: compat.lua
data/lib/core/: constants.lua  core.lua  doors.lua  exercise_training.lua  familiar.lua  game.lua  house_autowrap.lua  imbuing.lua  item.lua  object_types.lua  party.lua  player.lua  quests.lua  spells.lua  stamina_training.lua  storages.lua  tile.lua
data/lib/functions/: boosted_list.lua  exercise_training.lua  house_autowrap.lua  load.lua  monk_harmony.lua
data/migrations/: 21.lua  32.lua  33.lua  37.lua  38.lua  4.lua
data/monsters/1_spells_monsters/: angry_orc_ancestor_spirit_fear.lua  angry_orc_ancestor_spirit_rooted.lua  blood_ring.lua  clouds_chain.lua  dark_blood_wave.lua  eruption_of_destruction_explosion.lua  fear.lua  gaz'haragoth_death.lua  gaz'haragoth_summon.lua  heal_malice.lua  heal_monsters.lua  heal_monsters_9x9.lua  mawhawk_ue.lua  plaguesmith_wave.lua  removestorage_ghost.lua  removestorage_storm.lua  removestorage_vortex.lua  removestorage_vortex2.lua  root.lua  root_area.lua  root_wave.lua  rootkraken_rootearth.lua  single_cloud_chain.lua  single_death_chain.lua  single_ice_chain.lua  souleater_wave.lua  soulwars_fear.lua  tenebris_ultimate.lua
data/monsters/amphibics/: azure_frog.lua  bog_frog.lua  coral_frog.lua  crimson_frog.lua  deathspawn.lua  filth_toad.lua  green_frog.lua  infernal_frog.lua  makara.lua  orchid_frog.lua  salamander.lua  toad.lua
data/monsters/aquatics/: abyssal_calamary.lua  blood_crab.lua  calamary.lua  crab.lua  crustacea_gigantica.lua  deathling_scout.lua  deathling_spellsinger.lua  deepling_brawler.lua  deepling_elite.lua  deepling_guard.lua  deepling_master_librarian.lua  deepling_scout.lua  deepling_spellsinger.lua  deepling_tyrant.lua  deepling_warrior.lua  deepling_worker.lua  deepsea_blood_crab.lua  fish.lua  jellyfish.lua  manta_ray.lua  northern_pike.lua  quara_constrictor.lua  quara_constrictor_scout.lua  quara_hydromancer.lua  quara_hydromancer_scout.lua  quara_looter.lua  quara_mantassin.lua  quara_mantassin_scout.lua  quara_pincher.lua  quara_pincher_scout.lua  quara_plunderer.lua  quara_predator.lua  quara_predator_scout.lua  quara_raider.lua  renegade_quara_constrictor.lua  renegade_quara_hydromancer.lua  renegade_quara_mantassin.lua  renegade_quara_pincher.lua  renegade_quara_predator.lua  shark.lua
data/monsters/birds/: agressive_chicken.lua  agrestic_chicken.lua  berserker_chicken.lua  cave_parrot.lua  chicken.lua  demon_parrot.lua  dire_penguin.lua  flamingo.lua  headpecker.lua  jungle_moa.lua  marsh_stalker.lua  parrot.lua  penguin.lua  pigeon.lua  seagull.lua  tame_terror_bird.lua  terror_bird.lua
data/monsters/bosses/: ahau.lua  alchemist_container.lua  antenna.lua  apocalypse.lua  apprentice_sheng.lua  armenius.lua  bakragore.lua  bazir.lua  bibby_bloodbath.lua  big_boss_trolliver.lua  black_knight.lua  brain_head.lua  brain_parasite.lua  bullwark.lua  cerebellum.lua  chagorz.lua  chikhaton.lua  cublarc_the_plunderer.lua  custodian.lua  dharalion.lua  diblis_the_fair.lua  diseased_bill.lua  diseased_dan.lua  diseased_fred.lua  doctor_marrow.lua  ekatrix.lua  elvira_hammerthrust.lua  energized_raging_mage.lua  fleshslicer.lua  freegoiz.lua  gaffir.lua  general_murius.lua  glitterscale.lua  gorga.lua  grandfather_tridian.lua  gravelord_oshuran.lua  groam.lua  guard_captain_quaid.lua  hairman_the_huge.lua  heoni.lua  (+57 more)
data/monsters/constructs/: animated_snowman.lua  biting_book.lua  clay_guardian.lua  damaged_crystal_golem.lua  damaged_worker_golem.lua  diamond_servant.lua  diamond_servant_replica.lua  enraged_crystal_golem.lua  eternal_guardian.lua  gingerbread_men.lua  glooth_golem.lua  goggle_cake.lua  golden_servant.lua  golden_servant_replica.lua  ice_golem.lua  infected_weeper.lua  iron_servant.lua  iron_servant_replica.lua  lava_golem.lua  magma_crawler.lua  metal_gargoyle.lua  orewalker.lua  rustheap_golem.lua  sandstone_scorpion.lua  shrieking_cry-stal.lua  stone_devourer.lua  stone_golem.lua  walker.lua  war_golem.lua  weeper.lua  worker_golem.lua
data/monsters/dawnport/: brittle_skeleton.lua  crazed_dwarf.lua  dawn_bat.lua  dawn_scorpion.lua  dawnfly.lua  juvenile_cyclops.lua  lesser_fire_devil.lua  meadow_strider.lua  mountain_troll.lua  muglex_clan_assassin.lua  muglex_clan_footman.lua  muglex_clan_scavenger.lua  sacred_snake.lua  salamander_trainer.lua  scar_tribe_shaman.lua  scar_tribe_warrior.lua  spidris_elitesumom.lua  troll-trained_salamander.lua  troll_marauder.lua  woodling.lua
data/monsters/demons/: askarak_demon.lua  askarak_lord.lua  askarak_prince.lua  brinebrute_inferniarch.lua  broodrider_inferniarch.lua  dark_torturer.lua  dawnfire_asura.lua  demon.lua  demon_outcast.lua  destroyer.lua  diabolic_imp.lua  duskbringer.lua  fire_devil.lua  floating_savant.lua  frost_flower_asura.lua  fury.lua  gozzler.lua  (+22 more)
data/npc/: Imbuement Master.xml
data/world/: forgotten-spawn.xml  forgotten.otbm  world-spawn.xml
doc/: MONSTER_LEVEL.md
docs/: chain_system.md
src/: CMakeLists.txt  actions.cpp  actions.h  baseevents.cpp  baseevents.h  chat.cpp  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasetasks.cpp  databasetasks.h  definitions.h  depotchest.cpp  depotchest.h  depotlocker.cpp  enums.h  events.cpp  events.h  familiar.cpp  familiar.h  game.cpp  game.h  globalevent.cpp  globalevent.h  guild.cpp  (+111 more)
src/tests/: test_item_lifetime.cpp
tools/: run-asan.sh  run-valgrind.sh
vc17/: theforgottenserver.vcxproj  theforgottenserver.vcxproj.filters
(+1813 files in other folders)
